--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+* {
+    font-family: "Open Sans", sans-serif;
+}
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: lightgray;
+    padding: 15px 10px;
 }
 
 #logo {
@@ -12,9 +17,13 @@ nav {
 #menu {
     list-style: none;
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     margin: 0;
     padding: 0;
+}
+
+#menu li {
+    padding: 2px 5px;
 }
 
 #menu li a {
@@ -23,10 +32,31 @@ nav {
     font-weight: bold;
 }
 
+#menu li:hover{
+    background-color: white;
+}
+
 #about-me {
     display: flex;
 }
 
 #about-me img {
     max-width: 300px;
+}
+
+#projects li {
+    list-style-type: "\266B";
+}
+
+.project-title {
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.project-title:hover {
+    cursor: pointer;
+}
+
+.hide {
+    display: none;
 }
